[project]
name = "cse138-grading-s25"
version = "0.1.0"
description = "Grading for CSE 138 Spring 2025"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docker>=7.1.0",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "ruff>=0.11.4",
]

[tool.ruff]
lint.select = ["E4", "E7", "E9", "F", "I"]
line-length = 120

[tool.pyright]
typeCheckingMode = "standard"
